src/test/contracts/top_level_patterns/negative/jsligo/tuple.jsligo
const r = [1 as nat, 1, "Hello"]
const [a, a, c] = r